# whitebox

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  LICENSE.dependencies  README.md  REVIEW_OWNERS.md  SECURITY.md  THIRD_PARTY  cpp.hint
apps/half-life-2/: CMakeLists.txt  app_version_config.h.cmake.in  half_life_2_win.rc  hl2_exe_flags.cc  hl2_exe_flags.h  hl2_exe_main_mac.cc  hl2_exe_main_macos.cc  hl2_exe_main_nix.cc  hl2_exe_main_unix.cc  hl2_exe_main_win.cc  main_mac.cc  main_nix.cc  main_window.cc  main_window.h  main_windows.cc  resource_win.h  windows_half_life_2.rc  windows_main.cc  windows_resource.h
base/: CMakeLists.txt  README.md  base_api.h  base_macroses.h  base_macroses_tests.cc  base_main_tests.cc  base_switches.h  base_types.h  base_types_tests.cc  config.h  default_new_handler.cc  default_new_handler.h  default_new_handler_tests.cc  high_resolution_clock.h  macroses.h  macroses_tests.cc  main_tests.cc  policy_checks.h  sampling_profiler.h  sampling_profiler_tests.cc  scoped_app_instance_manager.cc  scoped_app_instance_manager.h  scoped_app_instance_manager_tests.cc  scoped_floating_point_mode.h  scoped_floating_point_mode_tests.cc  scoped_new_handler.cc  scoped_new_handler.h  scoped_new_handler_tests.cc  scoped_process_terminate_handler.h  scoped_process_terminate_handler_tests.cc  scoped_process_unexpected_handler.h  scoped_shared_library.h  scoped_shared_library_tests.cc  scoped_thread_terminate_handler.h  unique_module_ptr.h
base/include/: base_macroses.h  compiler_config.h  sampling_profiler.h  scoped_new_handler.h  scoped_thread_terminate_handler.h  system_error_ext.h
base/include/memory/: memory_allocators_overrides.cc
base/include/windows/: compiler_config.h  scoped_last_error.h  scoped_minimum_timer_resolution.h  scoped_new_handler.h  scoped_new_mode.h  scoped_pure_call_handler.h  scoped_thread_invalid_parameter_handler.h  scoped_thread_unexpected_handler.h  system_error_ext.h  windows_headers_config.h  windows_light.h  windows_macroses_fixup.h
base/internals/: scoped_new_handler_internal.h
base/intl/: clocale_ext.h  l18n.h  l18n_tests.cc  lookup.cc  lookup.h  lookup_tests.cc  lookup_with_fallback.cc  lookup_with_fallback.h  lookup_with_fallback_tests.cc  message_ids.h  scoped_process_locale.h  scoped_process_locale_tests.cc
base/memory/: memory_allocators_overrides.cc
base/parsers/: character_set.h  character_set_tests.cc  simple_token_parser.h  simple_token_parser_tests.cc
base/posix/: scoped_shared_memory_object.h  system_error_ext.h
base/posix/pthread/: scoped_mutex.h  scoped_mutex_attribute.h
base/std2/: counting_streambuf.h  counting_streambuf_tests.cc  cstring_ext.h  cstring_ext_tests.cc  filesystem_ext.cc  filesystem_ext.h  filesystem_ext_tests.cc  string_ext.cc  string_ext.h  string_ext_tests.cc  string_view_ext.cc  string_view_ext.h  string_view_ext_tests.cc  system_error_ext.h  system_error_ext_tests.cc  thread_ext.cc  thread_ext.h  thread_ext_tests.cc  type_traits_ext.h  type_traits_ext_tests.cc
base/std_ext/: clocale_ext.h  cstring_ext.cc  cstring_ext.h  cstring_ext_tests.cc  filesystem_ext.cc  filesystem_ext.h  string_ext.cc  string_ext.h  string_ext_tests.cc  string_view_ext.h  string_view_ext_tests.cc  system_error_ext.h  type_traits_ext.h
base/tests/: ci_detection.h  g3log_death_utils.cc  g3log_death_utils.h  g3log_death_utils_tests.cc  g3log_death_utils_tests.h  mimalloc_output_handlers.cc  mimalloc_output_handlers.h
base/threads/: thread_utils.cc  thread_utils.h
base/win/: dll_load_utils.h  dll_load_utils_tests.cc  scoped_minimum_timer_resolution.h  scoped_mutex.h  scoped_set_dll_directory.h  scoped_thread_execution_state.h  scoped_timer_resolution.h  system_error_ext.h  system_error_ext_tests.cc  unique_handle.h  unique_handle_tests.cc  windows_headers_config.h  windows_light.h  windows_version.cc  windows_version.h  windows_version_tests.cc
base/win/com/: com_ptr.h  com_ptr_tests.cc  scoped_com_fatal_exception_handler.h  scoped_com_initializer.h  scoped_com_strong_unmarshalling_policy.h  scoped_thread_com_initializer.h  scoped_thread_com_initializer_tests.cc
base/win/error_handling/: scoped_process_pure_call_handler.h  scoped_process_pure_call_handler_tests.cc  scoped_pure_call_handler.h  scoped_thread_error_mode.h  scoped_thread_error_mode_tests.cc  scoped_thread_invalid_parameter_handler.h  scoped_thread_invalid_parameter_handler_tests.cc  scoped_thread_last_error.h  scoped_thread_last_error_tests.cc
base/win/memory/: memory_utils.cc  memory_utils.h  scoped_local_memory.h  scoped_local_memory_tests.cc  scoped_new_handler.h  scoped_new_mode.h
base/win/mmcss/: scoped_mmcss_thread_controller.cc  scoped_mmcss_thread_controller.h  scoped_mmcss_toggle_dwm.h
base/win/security/: os_objects_access_rights.h  process_mitigations.cc  process_mitigations.h
base/win/ui/: accessibility_shortcut_keys_toggler.cc  accessibility_shortcut_keys_toggler.h  base_window.cc  base_window.h  full_screen_window_toggler.cc  full_screen_window_toggler.h  peek_message_dispatcher.h  scoped_change_cursor.h  scoped_toggle_cursor.h  scoped_window_class.h  scoped_window_paint.cc  scoped_window_paint.h  task_dialog.cc  task_dialog.h  window_definition.h  window_message_handlers.h  window_utilities.cc  window_utilities.h
base/windows/: dll_load_utils.h  dll_load_utils_tests.cc  scoped_minimum_timer_resolution.h  scoped_pure_call_handler.h  scoped_thread_execution_state.h  system_error_ext.h  windows_headers_config.h  windows_light.h  windows_version.cc  windows_version.h
base/windows/com/: com_ptr.h  com_ptr_tests.cc  scoped_com_initializer.h  (+2 more)
bootmgr/: CMakeLists.txt  README.md  api.h  bootmgr_api.h  bootmgr_main.cc  bootmgr_main.h
whitebox-kernel/: CMakeLists.txt  README.md  config.h  main.cc  main.h  main_window.cc  main_window.h  main_window_posix.cc  main_window_posix.h  main_window_unix.cc  main_window_unix.h  main_window_win.cc  main_window_win.h  whitebox_kernel_api.h  whitebox_kernel_main.cc  whitebox_kernel_main.h
(+176 files in other folders)
